add change status and vote option
