# backend-go/docs/swagger.yaml
@@ -216,6 +216,38 @@ paths:
       summary: Get event by id
       tags:
       - events
+    patch:
+      consumes:
+      - application/json
+      parameters:
+      - description: event id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: status
+        in: query
+        name: status
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.Event'
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      security:
+      - Bearer: []
+      summary: Change a event status
+      tags:
+      - events
   /v1/events/{id}/user:
     patch:
       consumes:
@@ -242,6 +274,39 @@ paths:
       security:
       - Bearer: []
       summary: Register a user to event
+      tags:
+      - events
+  /v1/events/vote/{event_id}/options/{option_id}:
+    patch:
+      consumes:
+      - application/json
+      parameters:
+      - description: event id
+        in: path
+        name: event_id
+        required: true
+        type: string
+      - description: event option id
+        in: path
+        name: option_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.Event'
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      security:
+      - Bearer: []
+      summary: Vote an event option
       tags:
       - events
 securityDefinitions:
