# backend-go/internal/core/controller/event_controller.go
@@ -143,6 +143,73 @@ func (c *EventController) RegisterEvent(ctxGin *gin.Context) {
 	ctxGin.JSON(http.StatusOK, event)
 }
 
+// ChangeEventStatus godoc
+// @Summary      Change a event status
+// @Description
+// @Tags         events
+// @Accept       json
+// @Produce      json
+// @Param		 id path string true "event id"
+// @Param		 status query string true "status"
+// @Success      200 {object} entity.Event
+// @Failure      400
+// @Failure      404
+// @Failure      500
+// @Router       /v1/events/{id} [patch]
+// @Security 	 Bearer
+func (c *EventController) ChangeEventStatus(ctxGin *gin.Context) {
+	id := ctxGin.Param("id")
+	objectId, err := primitive.ObjectIDFromHex(id)
+	if err != nil {
+		ctxGin.JSON(http.StatusBadRequest, gin.H{"message": err.Error()})
+		return
+	}
+	status := ctxGin.Query("status")
+	event, err := c.eventService.ChangeEventStatus(objectId, status)
+	if err != nil {
+		ctxGin.JSON(http.StatusBadRequest, gin.H{"message": err.Error()})
+		return
+	}
+
+	ctxGin.JSON(http.StatusOK, event)
+}
+
+// VoteEventOption godoc
+// @Summary      Vote an event option
+// @Description
+// @Tags         events
+// @Accept       json
+// @Produce      json
+// @Param		 event_id path string true "event id"
+// @Param		 option_id path string true "event option id"
+// @Success      200 {object} entity.Event
+// @Failure      400
+// @Failure      404
+// @Failure      500
+// @Router       /v1/events/vote/{event_id}/options/{option_id} [patch]
+// @Security 	 Bearer
+func (c *EventController) VoteEventOption(ctxGin *gin.Context) {
+	eid := ctxGin.Param("event_id")
+	eventId, err := primitive.ObjectIDFromHex(eid)
+	if err != nil {
+		ctxGin.JSON(http.StatusBadRequest, gin.H{"message": err.Error()})
+		return
+	}
+	oid := ctxGin.Param("option_id")
+	eventOptionId, err := primitive.ObjectIDFromHex(oid)
+	if err != nil {
+		ctxGin.JSON(http.StatusBadRequest, gin.H{"message": err.Error()})
+		return
+	}
+	event, err := c.eventService.VoteEventOption(eventId, eventOptionId)
+	if err != nil {
+		ctxGin.JSON(http.StatusBadRequest, gin.H{"message": err.Error()})
+		return
+	}
+
+	ctxGin.JSON(http.StatusOK, event)
+}
+
 func getCurrentUser(ctxGin *gin.Context, currentUser *entity.User) {
 	user, ok := ctxGin.Get("user")
 	if !ok {
